--- a/estudos001/estudos001.html
+++ b/estudos001/estudos001.html
@@ -7,17 +7,38 @@
     <title>uHost</title>
     <link rel="shorcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+    <header class="main-header">
+        <div>
+            <a href="estudos001.html" class="main-header__brand">
+                UHost
+            </a>
+        </div>
+        <nav class="main-nav">
+            <ul class="main-nav__items">
+                <li class="main-nav__item">
+                    <a href="packages/estudos001.html">Packages</a>
+                </li>
+                <li class="main-nav__item">
+                    <a href="customers/estudos001.html">Customers</a>
+                </li>
+                <li class="main-nav__item main-nav__item--cta">
+                    <a href="start-hosting/estudos001.html">Start Hosting</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section id="product-overview">
             <h1>Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
+            <p>Make sure you get the most for your money!</p>
         </section>
     </main>
 </body>
