--- a/estudos001/estudos001.html
+++ b/estudos001/estudos001.html
@@ -8,7 +8,8 @@
     <link rel="shorcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="shared.css">
+    <link rel="stylesheet" href="main.css">    
 </head>
 
 <body>
@@ -38,7 +39,7 @@
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
-            <div>
+            <div class="plan__list">
                 <article class="plan">
                     <h1 class="plan__tittle">FREE</h1>
                     <h2 class="plan__price">$0/month</h2>
@@ -84,6 +85,41 @@
                 </article>
             </div>
         </section>
+        <section id="key-features">
+            <h1 class="section-title">Many Good Reasons to Stick Around</h1>
+            <ul class="key-feature__list">
+                <li class="key-feature">
+                    <div class="key-feature__image">
+
+                    </div>
+                    <p class="key-feature__description">3,857,000 Trusting Customers</p>
+                </li>
+                <li class="key-feature">
+                    <div class="key-feature__image">
+
+                    </div>
+                    <p class="key-feature__description">99.999% Uptime Guarantee</p>
+                </li>
+                <li class="key-feature">
+                    <div class="key-feature__image">
+
+                    </div>
+                    <p class="key-feature__description">Lightning Fast CDN</p>
+                </li>
+            </ul>
+        </section>
     </main>
+    <footer class="main-footer">
+        <nav>
+            <ul class="main-footer__links">
+                <li class="main-footer__link">
+                    <a href="#">Support</a>
+                </li>
+                <li class="main-footer__link">
+                    <a href="#">Terms of Use</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
